# multimodal-compliance-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
backend/scripts/: index_documents.py
backend/src/api/: server.py
backend/src/graph/: node.py  state.py  workflow.py
backend/src/services/: video_indexer.py
frontend/: app.py
